src/objects/Enterprise_Account_Status__c.object
<CustomObject>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <label>Territory Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Enterprise Account Status</label>
    <nameField>
        <label>Enterprise Account Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enterprise Account Statuss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>